# ppd-laboratory

./: .gitignore  Instructiuni run_process.sh.docx  LICENSE  MPI-instalation on windows.docx  README.md  Reguli de organizare laborator.docx  Testare performantei .docx  Verificarea corectitudii.docx  run_process.sh
lab-1/: .project  build.gradle
lab-1/src/main/java/: Main.java
lab-13/tema-p1/: P1-Client-Server.docx
lab-14/tema-p2/: .gitignore  CMakeLists.txt  docs.md  filter.cu  img_to_px.py  px_to_img.py
lab-2/: L2_utils.docx
lab-2/tema-lab-1/: cpp-diagram.mdj  docs.md
lab-2/tema-lab-1/t1-cpp/: CMakeLists.txt  data2.txt  data3.txt  main.cpp
lab-2/tema-lab-1/t1-cpp-2/: CMakeLists.txt
lab-2/tema-lab-1/t1-cpp-2/src/: data.txt  main.cpp  multiThreaded.cpp  multiThreaded.h  sequential.cpp  sequential.h  timer.cpp  timer.h
lab-2/tema-lab-1/t1-cpp/src/: multiThreaded.cpp  multiThreaded.h  sequential.cpp  sequential.h  timer.cpp  timer.h
lab-2/tema-lab-1/t1-java/: data.txt  settings.gradle
lab-3/tema-lab-2/: docs.md
lab-3/tema-lab-2/t2-cpp/: CMakeLists.txt  run_cpp.sh
lab-3/tema-lab-2/t2-java/: .project  build.gradle  data3.txt  out.txt  settings.gradle
lab-3/tema-lab-2/test-data/: data1.txt  data2.txt
lab-6/inclass-mpi1/: CMakeLists.txt  main.cpp  scatter.cpp
lab-7/tema-3/: docs.md
lab-7/tema-3/t3-cpp/: CMakeLists.txt  Numar1.txt  Numar2.txt  classic-mpi.cpp  main.cpp  randnum.sh  scatter-mpi.cpp  sequential.cpp
lab-8/inclass-deadlock1/: settings.gradle
lab-9/tema-4/: docs.md
lab-9/tema-4/t4-java/: build.gradle  out.txt  settings.gradle
(+20 files in other folders)
